--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
 
 
 </head>
-<body>
-<div class="jumbotron">
-		<div class="container">
-			<h1>Play Shot Roulette</h1>
-			<p>Select players below then follow instructions on screen</p>
-		</div>
+
+<body >
+<div class="jumbotron" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS54xK1OcD1c9ZtSkmJxPnMpaESpewnRMi0Ej_RJraTeRrEtkMXqA); width: 100%;
+  height: 180px;">
 </div>
-	<h3>Select players from list below</h3><hr />
-	<p>If a player's name is not there select a pokemon for them</p><hr />
+
 <form name="thisForm">
 <div class="row" id="namesSection">
 
@@ -39,24 +36,12 @@
 
 	var possiblePlayer = ['Scott1.0', 
 	'Amy',
-	'Gar', 
-	'Aaron',
-	'Sarah',
 	'Kathy',
-	'Catherine',
-	'Leo',
 	'Scott_N0.1',
-	'JaneyMc',
-	'Paddy',
-	'Ali',
-	'Laoise',
-	'Laura',
-	'Conor',
 	'Endog',
-	'Alex',
-	'Pikachu',
-	'Squirtle',
-	'red17'
+	'Rohan',
+	'Amal',
+	'Squirtle'
 	];
 	
 	var mainHTML = "";
