--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <div class="jumbotron" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS54xK1OcD1c9ZtSkmJxPnMpaESpewnRMi0Ej_RJraTeRrEtkMXqA); width: 100%;
   height: 180px;">
 </div>
-
+	<h3>Select players from list below</h3><hr />
+	<p>The place the phone in the center of a circle of shots!!!</p><hr />
 <form name="thisForm">
 <div class="row" id="namesSection">
 
