--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 
 
 		$("body").html("<div id='container' style='min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto'></div><script type='text/javascript'>Highcharts.chart('container', {chart: {plotBackgroundColor: null, plotBorderWidth: null, plotShadow: false, type: 'pie'}, title: {text: 'BOOOOOMMMMMM!!!!'},plotOptions: {pie: {cursor: 'pointer',dataLabels: {enabled: true,format: '<b>{point.name}</b>',style: {color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'}}}},series: [{name:'Brands',colorByPoint: true,data: ["+codeHTML+"]}]})");
-		
+	$("body").fadeOut(001);
+		$("body").fadeIn(7000)	
 	};
 	
 	
